FIXING EVERYTHING
The code was messed up, everything was duplicated (apparantly someone added a second body-tag) and it was just bad code. I had to go back and restore our text, restore the previous footer and also all style elements must go in the css-file, not in html. Deleted unnessecary files too. I fixed it. Think before you commit.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p {
 
 /*Header*/
 header {
-background-color: #fff; /*Temporary color*/
+background-color: #fff;
 position: fixed;
 height: 60px;
 width: 100%;
@@ -87,14 +87,14 @@ text-align: center;
   width: 400px;
   height: 180px;
   margin-top: 80px;
-  background-color: #fff; /*Temporary color*/
+  background-color: #fff;
 }
 
 #page2box2 {
   width: 500px;
   min-height: 150px;
   margin-top: 120px;
-  background-color: #fff; /*Temporary color*/
+  background-color: #fff;
 }
 
 
@@ -114,29 +114,42 @@ text-align: center;
 }
 
 #page4box1 {
-  width: 500px;
-  height: 275px;
+  width: 530px;
+  height: 250px;
   margin-top: 170px;
-  background-color: #fff; /*Temporary color*/
+  background-color: #fff;
 }
 
 footer {
     background-color: #080808;
-    /*Temporary color*/
     width: 100%;
-    padding: 30px;
     display: block;
     color: #fff;
     text-align: center;
 }
 
-footer P {
+footer p {
     color: #fff;
     margin: auto;
     display: block;
+    padding: 7px;
 }
 
 
-.footlogo {
-    position: relative;
-    top: -2%;
+#facebook {
+  height: 53px;
+  position: relative;
+  margin: auto;
+}
+
+#linkedin {
+  height: 50px;
+  position: relative;
+  margin: auto;
+}
+
+#instagram {
+   height: 50px;
+   position: relative;
+   margin: auto;
+}
